# rustloader2

./: .deepsource.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY_GUIDE.md  analyze_code.py  apply_fixes.py  install.sh  rustloader_test_report.md  secure_install.sh  uninstall.sh
.github/scripts/: analyze_code.py  apply_fixes.py
.github/workflows/: claude-ci.yml  claude-code-review.yml
gui/: index.html  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.css  App.d.ts  App.jsx  App.tsx  index.css  main.tsx  tauri-store.d.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs  notification.rs
gui/src/components/: Alert.tsx  DownloadForm.css  DownloadForm.tsx  DownloadInfoCard.jsx  DownloadManager.jsx  ErrorHandler.tsx  FeatureTour.tsx  Footer.tsx  Header.tsx  HelpCenter.tsx  LicenseInfo.css  LicenseInfo.tsx  OnboardingTutorial.tsx  ProgressBar.css  ProgressBar.tsx  RustloaderApp.jsx  SettingsPanel.jsx  Tabs.tsx  Tooltip.tsx
gui/src/hooks/: useOptimizedDownloads.js
src/: cli.rs  dependency_validator.rs  download_manager.rs  downloader.rs  error.rs  lib.rs  license.rs  main.rs  security.rs  utils.rs  version.rs
tests/: cli_test.rs  dependency_validator_test.rs  error_test.rs  mock_downloader_test.rs  security_test.rs  utils_test.rs
