[package]
name = "rustloader"
version = "1.0.0"  # Updated version number
edition = "2021"
authors = ["Ibrahim Mohamed"]
description = "Advanced video downloader for various content sources"

# Both a library and a binary
[lib]
name = "rustloader"
path = "src/lib.rs"

[[bin]]
name = "rustloader"
path = "src/main.rs"


[dependencies]
# Existing dependencies
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = "4.5"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1.3"
dirs-next = "2.0.0"
indicatif = "0.17"
home = "0.5"
scraper = "0.22.0"
regex = "1.11"
colored = "2.0"
daemonize = "0.5.0"
notify-rust = "4.11.3"
once_cell = "1.21.0"

# New dependencies for free/pro version
rand = "0.8"           # For randomizing promotional messages

# New dependencies for security & updates
ring = "0.17"           # For cryptographic operations
base64 = "0.21"         # For encoding/decoding
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"      # For JSON handling
semver = "1.0"          # For version comparison
hostname = "0.3"        # For machine identification

# Logging framework
log = "0.4"             # Logging facade
env_logger = "0.10"     # Environment-based logger implementation
# chrono is already included above with the same features

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.51"         # For Windows registry access

[features]
default = []
pro = []  # Feature flag for Pro version